[package]
name = "white-noise-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4" }
env_logger = "0.11.8"
log = "0.4"
rand = "0.9.2"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
